# AdbBot

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  pyproject.toml  tauri.bundle.json  tauri.bundle.templates.json  tauri.bundle.windows.json  tauri.conf.json
src-tauri/Settings/: ADB.toml  AFKJourney.toml  App.toml  README.md
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discord.rs  lib.rs  log.rs  main.rs  notification.rs  settings.rs  shutdown.rs  tray.rs  window.rs
src-tauri/src-python/adb_auto_player/: __main__.py  main_cli.py  task_loader.py
src-tauri/src-python/adb_auto_player/cli/: __init__.py  argparse_helper.py
src-tauri/src-python/adb_auto_player/commands/: adb.py  debug.py
src-tauri/src-python/adb_auto_player/decorators/: __init__.py  register_command.py  register_custom_routine_choice.py  register_game.py  register_lru_cache.py
src-tauri/src-python/adb_auto_player/exceptions/: adb.py
src-tauri/src-python/adb_auto_player/file_loader/: settings_loader.py
src-tauri/src-python/adb_auto_player/game/: game.py
src-tauri/src-python/adb_auto_player/games/: __init__.py
src-tauri/src-python/adb_auto_player/image_manipulation/: __init__.py  color.py  cropping.py  scaling.py
src-tauri/src-python/adb_auto_player/ipc/: command_gui_categories.py  game_gui.py  log_message.py  summary.py
src-tauri/src-python/adb_auto_player/ipc_util/: __init__.py  ipc_model_converter.py
src-tauri/src-python/adb_auto_player/log/: log_presets.py  logging_setup.py
src-tauri/src-python/adb_auto_player/ocr/: __init__.py  tesseract_backend.py  tesseract_psm.py
src-tauri/src-python/adb_auto_player/registries/: __init__.py  registries.py
src-tauri/src-python/adb_auto_player/scripts/: __init__.py  testing.py
src-tauri/src-python/adb_auto_player/tauri_context/: __init__.py  cache.py  context.py
src-tauri/src-python/adb_auto_player/tauri_helpers/: __init__.py  menu.py
src-tauri/src-python/adb_auto_player/template_matching/: template_matcher.py
src-tauri/src-python/adb_auto_player/util/: __init__.py  execute.py  log_message_factory.py  string_helper.py  traceback_helper.py  type_helper.py
src-tauri/src-python/adb_bot/: __init__.py  __main__.py  main_cli.py  task_loader.py
src-tauri/src-python/adb_bot/cli/: argparse_helper.py
src-tauri/src-python/adb_bot/commands/: __init__.py  adb.py  debug.py
src-tauri/src-python/adb_bot/cv/: __init__.py  io.py
src-tauri/src-python/adb_bot/decorators/: register_command.py  register_custom_routine_choice.py  register_game.py  register_lru_cache.py
src-tauri/src-python/adb_bot/exceptions/: __init__.py  base.py  game.py
src-tauri/src-python/adb_bot/file_loader/: __init__.py  settings_loader.py
src-tauri/src-python/adb_bot/game/: README.md  android_game_base.py  game.py  game_base.py  game_settings_abc.py
src-tauri/src-python/adb_bot/games/: __init__.py
src-tauri/src-python/adb_bot/image_manipulation/: cropping.py  io.py
src-tauri/src-python/adb_bot/io/: settings_loader.py
src-tauri/src-python/adb_bot/ipc/: __init__.py  category.py  game_gui.py  log_message.py  menu_option.py
src-tauri/src-python/adb_bot/ipc_util/: ipc_model_converter.py
src-tauri/src-python/adb_bot/log/: __init__.py  logging_setup.py
src-tauri/src-python/adb_bot/models/: __init__.py  confidence_value.py
src-tauri/src-python/adb_bot/ocr/: tesseract_backend.py  tesseract_config.py  tesseract_oem.py
src-tauri/src-python/adb_bot/registries/: registries.py
src-tauri/src-python/adb_bot/scripts/: check_template_usage.py  testing.py
src-tauri/src-python/adb_bot/tauri/: __init__.py  menu.py
src-tauri/src-python/adb_bot/tauri_helpers/: menu.py
src-tauri/src-python/adb_bot/template_matching/: template_matcher.py
src-tauri/src-python/adb_bot/util/: __init__.py  dev_helper.py  (+7 more)
src-tauri/src-python/tests/: test_device_stream.py  test_game.py
(+292 files in other folders)
