[project]
name = "adb-bot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "yulesxoxo <https://github.com/yulesxoxo/yulesxoxo>" },
]
requires-python = ">=3.13.9"
dependencies = [
    "pytauri == 0.8.*",
    "pydantic>=2.12.5,<3",
    "anyio>=4.13.0,<5",
    "adbutils>=2.12.0,<3",
    "opencv-python>=4.13.0.92,<5",
    "av>=17.0.0,<18",
    "pillow>=12.1.1,<13",
    "pytesseract>=0.3.13,<0.4",
    "psutil>=7.2.2,<8",
    "numpy>=2.4.3,<2.5"
]

[project.scripts]
adb-bot = "adb_bot.main_cli:main"

[project.entry-points.pytauri]
ext_mod = "adb_bot.ext_mod"

[build-system]
requires = ["setuptools >= 80", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
required-version = ">=0.9.11"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = { where = ["src-python"], exclude = ["tests*", "*/tests*"] }

[tool.setuptools.package-data]
"*" = ["*.pyd", "*.so"]
